conformance_test/core_language_tests/positive_tests/06_types_and_values/0602_structured_types_and_values/060204_enumerated_type_and_values/NegSem_060204_enumerated_type_and_values_012.ttcn
/******************************************************************************
 * Copyright (c) ETSI 2017.
 *
 * This file is subject to copyrights owned by ETSI. Non-exclusive permission
 * is hereby granted, free of charge, to copy, reproduce and amend this file
 * under the following conditions: It is provided "as is", without warranty of any
 * kind, expressed or implied.
 * 
 * ETSI shall never be liable for any claim, damages, or other liability arising
 * from its use or inability of use.This permission does not apply to any documentation
 * associated with this file for which ETSI keeps all rights reserved. The present
 * copyright notice shall be included in all copies of whole or part of this
 * file and shall not imply any sub-license right.
 *
 * Modified by: Adrien Kirjak
 *
 ** @version  0.0.1
 ** @purpose  1:6.2.4, using enumerated value number integer conversion
 ** @verdict  pass reject
 ***************************************************/

// The following requirement is tested:
// enumerated values with a specific integer value assigned shall not use the associated integer

module NegSem_060204_enumerated_type_and_values_012 {

    type component GeneralComp {
	}
    
    type enumerated EDays {
        Monday(-1), Tuesday(1), Wednesday(2), Thursday(3), Friday(5)
    };
    
    testcase TC_NegSem_060204_enumerated_type_and_values_012() runs on GeneralComp {
        var EDays v_enum := Friday(5);    // error: shall not use the associated integer
     
        if (match(enum2int(v_enum),5)) {
		    setverdict(pass);
        } else {
            setverdict(fail);
        }
	}
	
	control {
		execute(TC_NegSem_060204_enumerated_type_and_values_012());
	}
}
